# ssm-simulators

./: .gitignore  README.md  mkdocs.yml  mkdocs_tmp.yml  pyproject.toml  setup.py
.github/workflows/: build_wheels.yml  run_tests.yml
cli/: generate.py
cli/config/: central_configurator.py
docs/basic_tutorial/: basic_tutorial.ipynb
docs/tutorials/: kde_class.ipynb
src/: __init__.py  cssm.pyx
src/ssms/basic_simulators/: boundary_functions.py  drift_functions.py  simulator.py  theta_processor.py
src/ssms/config/: config.py
src/ssms/dataset_generators/: lan_mlp.py  snpe.py
src/ssms/support_utils/: kde_class.py  utils.py
ssms/: __init__.py  drift_functions.py  hssm_support.py
ssms/basic_simulators/: __init__.py  boundary_functions.py  drift_functions.py  simulator.py  theta_processor.py
ssms/cli/: config_data_generation.yaml  generate.py
ssms/config/: __init__.py  config.py
ssms/config/_modelconfig/: __init__.py  base.py  conflict.py  ddm.py  ddm_par2.py  ddm_random.py  ddm_seq2.py  dev_rlwm_lba.py  ds_conflict_drift.py  full_ddm.py  shrink.py  utils.py  validation.py
ssms/config/_modelconfig/mic2/: adj.py  leak.py  multinoise.py  ornstein.py
ssms/config/generator_config/: data_generator_config.py
ssms/dataset_generators/: __init__.py  lan_mlp.py  snpe.py
ssms/support_utils/: kde_class.py
tests/: test_data_generator.py  test_deprecate.py  test_generate_cli.py  test_hssm_support.py  test_model_config.py  test_modelconfig_utils.py  test_simulator.py
tests/data_generator/: expected_constrained_param_space.py  expected_shapes.py  test_data_generator.py
